<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.pingfang.xmpp.fragment.AccountFragment">

    <TextView android:id="@+id/tv_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/tv_account_name"/>

    <TextView android:id="@+id/tv_account_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/tv_account_pwd"/>

    <Button android:id="@+id/btn_account_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_account_logout"/>

</LinearLayout>
